Fixed: Compilation fails due to Java 11 API used on Java 8 target